test/message/vm_dont_display_syntax_error.out
beginning
middle
test.vm:1
var 5;
    ^

SyntaxError: Unexpected number
    at new Script (vm.js:*)
    at createScript (vm.js:*)
    at Object.runInThisContext (vm.js:*)
    at Object.<anonymous> (*test*message*vm_dont_display_syntax_error.js:*)
    at Module._compile (module.js:*)
    at Object.Module._extensions..js (module.js:*)
    at Module.load (module.js:*)
    at tryModuleLoad (module.js:*:*)
    at Function.Module._load (module.js:*)
    at Function.Module.runMain (module.js:*)
